# labwc-zebarwidget-crystaldock

./: .gitignore  DANKMATERIALSHELL_OPENMANDRIVA.md  NOCTALIA_OPENMANDRIVA.md  README.md  TODOS.md  build-ocws-core.sh  build.zig  compose-fixes.sh  dotfiles-sync.sh.help  download-labwc.sh  install-dependencies.sh  install.sh  ocws-theme-center-README.md  patch_bar.sh  quick-start.sh  sfwbar-man.txt  summary.md  test-bars.config  test-display.sh  test-dynamic-island.config  test-rendering.sh  test-top.config  test.ini  wayland-healthcheck.sh
.github/workflows/: ci.yml  release.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1783747771758-crisp-harbor.md  1783824960147-sunny-wolf.md  1783943337529-happy-island.md  1784131144589-neon-tiger.md  1784538386710-jolly-circuit.md
components/: README.md  meson.build  registry.json
components/dock/crystal/: manifest.json
components/dock/none/: manifest.json
components/docks/crystal/: crystal-dock.c
components/libwidget/: widget.c
components/libwidget/include/: widget.h
components/libwidget/providers/: system.c
components/libwidget/render/: font.c  render.c
components/libwidget/wayland/: layer-shell.c
components/shared/: base-theme.c  base.css
components/statusbars/: core.c  framework.c
components/statusbars/compact/: compact.c
components/statusbars/main/: main.c
components/statusbars/panel/: panel.c
components/widgets-system/: widgets-system.c
components/widgets/battery/: battery.c
components/widgets/clock/: clock.c
components/widgets/cpu/: cpu.c
components/widgets/memory/: memory.c
components/widgets/network/: network.c
components/widgets/volume/: volume.c
components/widgets/workspaces/: workspaces.c
distro/: debian-sparky-lxqt.sh  debian.sh  openmandriva.sh
docs/: configuration.md  getting-started.md
dotfiles/: README.md  install.sh  wallpaper  wallpaper-sources.txt
dotfiles/applications/: ocws-dock-mgr.desktop
dotfiles/autostart/: sfwbar-tworow.desktop
dotfiles/foot/: foot.ini
dotfiles/fuzzel/: fuzzel.ini
dotfiles/gtk/: gtk.css
dotfiles/gtk-3.0/: gtk.css  settings.ini
dotfiles/gtk-4.0/: settings.ini
dotfiles/labwc/: autorun.conf  autostart  menu.xml  rc.xml  themerc-override
dotfiles/lxqt/: panel.conf
dotfiles/mako/: config
dotfiles/noctalia/: config.toml
dotfiles/nvim/: init.lua
dotfiles/ocws/: README.md  cpu-monitor.widget  dock.widget  memory-monitor.widget  ocws.config  (+5 more)
patches/: floating-layout.patch
probes/: ARCHITECTURE-PLAN.md  probe-applets.sh  probe-display.sh  probe-theme-engine.sh
scratch/: reconstruct.py
scripts/: README  actions.sh  debug-sfwbar.sh  diagnostics.sh  dock-sync.py  fix-gtk-fonts.sh  fix-ntfs-autostart.sh  fix-ntfs-rw.sh  fix.sh  font-scale.sh  health-check.sh  install-brew.sh  install-contour.sh  install-dependencies.sh  install-foot.sh  labwc-theme.sh  ocws-autorun.sh  ocws-check-requirements.sh  ocws-deps.sh  ocws-health.sh  ocws-icon-downloader.sh  ocws-icon-picker.sh  panel-mode-cycle  relaunch-status-bars.sh  reset-sfwbar.sh  reset-theme.sh  reset.sh  screenshot-tool.sh  setup-sfwbar.sh  sfwbar-watchdog.sh  shell-mode-picker.sh  start-labwc.sh  start-redshift.sh  start-simple-panel.sh  sync-dotfiles.sh  test-components.sh  theme-engine.sh  theme.sh  toggle-natural-scroll.sh  toggle-noctalia.sh  (+12 more)
sources-learn/: cliphist.md  integration-matrix.md  labwc.md  ocws-c-utils.md  ocws-daemon.md  ocws-emit.md  playerctl.md  sfwbar.md  state-management.md  theme-engine.md
src/: ocws.zig
statusbar-configs/: README.md  compact.conf  detailed.conf  main.conf  minimalist.conf
systems/: README.md  config.c  focus.c  lifecycle.c  navigation.c  preference.c  theme.c  transition.c
templates/: foot.ini.tmpl  gtk.css.tmpl  init.lua.tmpl  rofi.rasi.tmpl  sfwbar.css.tmpl  themerc-override.tmpl
tests/: run-all-tests.sh  run-integration-tests.sh  test-c-binaries.sh  test-widgets.sh  test_libocws.c  test_rr.c
themes/: catppuccin-mocha.ini  dracula.ini  everforest.ini  flexoki.ini  gruvbox.ini  kanagawa.ini  nord.ini  one-dark.ini  rose-pine.ini  solarized-dark.ini  tokyo-night.ini
widget-configs/: README.md  clock.json  detailed.json  minimalist.json  system.json  workspaces.json
www/: mkdocs.yml  security_lessons.md
(+373 files in other folders)
